2006-07-27  Andreas Kupries  <andreask@activestate.com>

	* tree/t.c (t_newnodename): Fixed bug [SF TCllib Bug 1528614],
	* tree/tn.c (tn_new):       reported by Helmut Giese
	* tree.testsuite:           <hgiese@users.sourceforge.net>.
	  Auto-generation of node names was able to generate
	  duplicates. Now it checks new handles for existence. Also added
	  a check to the function doing actual node creation to check
	  again, and panic on duplicates. Extended testsuite with variant
	  of Helmut's example.

2006-06-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.tcl : Added three new arc commands, 'move', 'move-target',
	  and 'move-source'. They change the nodes an arc is attached to,
	  without changing the identity of the arc itself. This makes
	  certain graph operations easier, as there is no need to save the
	  attributes of a node, delete it, create in the new location,
	  then recreate the attribute data.
	* pkgIndex.tcl: Bumped version number for this.
	* graph.man: Added documentation for them.
	* graph.test: Extended the testsuite to cover them as well.

2006-06-13  Andreas Kupries <andreask@activestate.com>

	* list.tcl:        Added two commands requested by Sarnold75,
	* list.test:       see [SF Tcllib RFE 1484791], variants of
	* struct_list.man: map and filter. Implemented, documented,
	* pkgIndex.tcl:    and tested.

2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Fixed [SF Tcllib Bug 1414051], brought implementation
	  of 'include' into sync with documentation. Behaving like
	  'lappend' means that we have to create the variable if it does
	  not exist. Thanks to michael Schlenker <mic42@users.sf.net>.
	* sets.test: Corrected the testsuite as well.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix1.test: Replaced [aget] with usage of the standard
	* matrix.test:  [dictsort]. Moved helper commands out of the
	  testsuites proper into a supporting file.
